hard-gists/8364262/run.log
=== Docker Run Log for 8364262 ===
Started at: Mi 29. Okt 17:44:13 CET 2025

[2025-10-29 17:44:14] START: Running container for 8364262
[2025-10-29 17:44:14] SUCCESS: Container b0165cba63cddacace9f5db249c9787fb9e90f071ed6856f172ed67ada8dbafc started for 8364262
=== Container logs for 8364262 ===
  File "/snippet.py", line 23
    print "Get Key Success:", data["success"]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8364262 ===
[2025-10-29 17:44:16] INFO: Container b0165cba63cddacace9f5db249c9787fb9e90f071ed6856f172ed67ada8dbafc has stopped
